# XTP

./: .gitignore  AdaptedApi试运行.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
Hdf5/: H5pubconf.h
XTP/: XTPConfig.cmake
XTP/include/: quote_spi.h  quote_spi_lxf.h
XTP_Algo/: XTP_AlgoConfig.cmake
XTP_Algo/include/: algo_api_struct.h  algo_data_type.h
apps/: CMakeLists.txt  CMakeLists_.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main  main.cpp  quotemain.txt  trademain.cpp
apps/Config/: AlgoConfig.yaml  AlgoLoginConfig.yaml  KuafuConfig.yaml  KuafuLogConfig.yaml  RiskManagement.yaml  TdfHc.yaml  XTPTradec.yaml  XtpTradec.yam;  XtpTradec.yaml
apps/Config1/: XTPTradec.yaml
cmake/: FindHdf5.cmake  KuafuConfig.cmake
include/: H5diff.h  Kuafu.h  KuafuUtils.h  KuafuVersion.h  LogConfig.h  NaNdefs.h  NumericTime.h  QuoteTypeDefs.h  TraderTypeDefs.h  Typedefs.h  YAMLGetField.h  quote_spi.h
include/Brokers/XTP/: AdaptedApi.h  AdaptedTypes.h
include/Brokers/XTP_Algo/: AdaptedApi.h  AdaptedTypes.h
include/TradeX/: AdaptedApi.h  AdaptedTypes.h  tradex_trader_api.h  tradex_types.h
include/WCTrader/: ErrorMessage.h  OrderID.h  OrderPack.h  TraderTypes.h  WCApi.h  WCApiTypes.h  WCNumericTime.h  WCResponseHandler.h  WCTrader.h
include/XTP/: AdaptedApi.h  AdaptedTypes.h
include/XTP_Algo/: AdaptedApi.h  AdaptedTypes.h
scripts/: render.sh
src/: AdaptedApi.cpp  CMakeLists.txt  CTestTestfile.cmake  H5diff.cpp  H5diff_old.txt  Kuafu.cpp  LogConfig.cpp  Makefile  cmake_install.cmake  quote_spi.cpp  quote_spi_lxf.cpp
src/Brokers/: CMakeLists.txt
src/Brokers/TradeX/: AdaptedApi.cpp
src/Brokers/XTP/: AdaptedApi.cpp
src/Brokers/XTP_Algo/: AdaptedApi.cpp
src/Brokers/XTP_Algo/Config/: AlgoConfig.yaml  AlgoLoginConfig.yaml
tests/: CMakeLists.txt  CTestTestfile.cmake  KuafuTest  KuafuTest.cpp  Makefile  NumericTimeTest  NumericTimeTest.cpp  cmake_install.cmake
